# polyp-segmentation-mlops

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.MD  docker-compose-app.yaml  docker-compose-mlflow.yaml  pyproject.toml  ray_segmentation_pipeline_v10.yaml  ray_segmentation_pipeline_v9.yaml  requirements.txt  terraform.tfstate
Jenkins/: Chart.yaml  README.md  values.yaml
Jenkins/templates/: configmap-casc.yaml  deployment.yaml  pvc.yaml  rolebinding.yaml  secret.yaml  service.yaml
app/: Dockerfile  requirements.txt  start.sh
app/backend/: __init__.py  clients.py  config.py  instrumentation.py  main.py  schemas.py  (+1 more)
debug/: mlflow_test.py  mnist.py  pipeline_test.py  ray.test.py  ray_mlflow_test.py  ray_pytorch_mlflow_pipeline.yaml  ray_torch_mlflow_smoke_pipeline.yaml  ray_torch_mlflow_smoke_pipeline1.yaml  ray_torch_mlflow_smoke_pipeline2.yaml  ray_torch_mlflow_smoke_pipeline3.yaml  ray_torch_mlflow_smoke_pipeline4.yaml  ray_torch_mlflow_smoke_pipeline5.yaml  ray_torch_mlflow_smoke_pipeline6.yaml  ray_torch_mlflow_smoke_pipeline7.yaml  ray_torch_mlflow_smoke_pipeline_hardenv.yaml  temp_pipeline.py  test.py  test_kfp_env.py  test_minio_local.py  test_ray_logger.py  test_uv_ray.py
deployment/: README.md
dockers/: dockerfile.mlflow
mlflow/: Chart.yaml  Dockerfile.mlflow  values.yaml
ray/: Dockerfile.ray  raycluster_example.yaml  requirements.txt
terraform/: README.md  main.tf  terraform.tfstate  terraform.tfvars  terraform.tfvars.example  variables.tf
training/: main.py  mlflow_test.py  ray_main.py  run_ray_train.sh  run_train.sh
(+47 files in other folders)
